<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewCoctelLight"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/coctel" />

    <TextView
        android:id="@+id/textViewNameLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/example_coctel_name"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewCoctelLight"
        app:layout_constraintTop_toTopOf="@+id/imageViewCoctelLight"
        tools:ignore="DuplicateIds" />

    <TextView
        android:id="@+id/textViewGraduationLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/example_graduation"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewCoctelLight"
        app:layout_constraintTop_toBottomOf="@+id/textViewNameLight" />

    <TextView
        android:id="@+id/textViewTypeLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/example_type"
        app:layout_constraintStart_toEndOf="@+id/imageViewCoctelLight"
        app:layout_constraintTop_toBottomOf="@+id/textViewGraduationLight" />
</androidx.constraintlayout.widget.ConstraintLayout>