<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="639dp"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardViewLanguage"
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="330dp"
        android:layout_height="wrap_content"

        android:layout_marginBottom="64dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/fontGray"
        app:strokeWidth="1dp">

        <!-- Card contents. -->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="45dp">

            <TextView
                android:id="@+id/txtTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_games"
                android:textSize="48sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonGameWhoWould"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:background="@drawable/buttons"
                android:text="@string/title_qemp"
                android:textColor="@color/fontWhite"
                app:layout_constraintEnd_toEndOf="@+id/txtTitulo"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="@+id/txtTitulo"
                app:layout_constraintTop_toBottomOf="@+id/txtTitulo" />

            <Button
                android:id="@+id/buttonGameChallenge"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:background="@drawable/buttons"
                android:text="@string/title_game_challenge"
                android:textColor="@color/fontWhite"
                app:layout_constraintEnd_toEndOf="@+id/buttonGameWhoWould"
                app:layout_constraintStart_toStartOf="@+id/buttonGameWhoWould"
                app:layout_constraintTop_toBottomOf="@+id/buttonGameWhoWould" />

            <Button
                android:id="@+id/btnJuego3"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:background="@drawable/buttons"
                android:text="Juego 3"
                android:textColor="@color/fontWhite"
                app:layout_constraintEnd_toEndOf="@+id/buttonGameChallenge"
                app:layout_constraintStart_toStartOf="@+id/buttonGameChallenge"
                app:layout_constraintTop_toBottomOf="@+id/buttonGameChallenge" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/buttonPlayers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/title_players"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardViewLanguage" />
</androidx.constraintlayout.widget.ConstraintLayout>